--- a/vignettes/get-started.Rmd
+++ b/vignettes/get-started.Rmd
@@ -109,7 +109,27 @@ mobile(mtcars, aes(qsec, wt)) %>%
   mobile_point(aes(y = mpg, color = "red"))
 ```
 
-## Theme
+## Interactions
+
+The functions `mobile_interaction` and `mobile_scroll` will let you customise interactions with the charts. The latter function simply adds a scrollbar.
+
+```{r}
+df <- data.frame(
+  x = 1:20,
+  y = runif(20, 1, 10)
+)
+
+# pan limits
+lmt <- list(x = list(min = -20, max = 20))
+
+mobile(df, aes(x, y)) %>% 
+  mobile_bar() %>% 
+  mobile_interaction("bar-select") %>% # highlight on select
+  mobile_interaction("pan", limitRange = lmt) %>% 
+  mobile_scroll(mode = "x", xStyle = list(offsetY = -5))
+```
+
+## Themes
 
 You can define your own theme with `mobile_theme`.
 
